--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,40 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+            html, body {
+                background-color: #fff;
+                color: #636b6f;
+                font-family: 'Nunito', sans-serif;
+                font-weight: 200;
+                height: 100vh;
+                margin: 0;
+            }
+
+            .top-right {
+                position: absolute;
+                right: 10px;
+                top: 18px;
+            }
+
+            .title {
+                font-size: 84px;
+            }
+
+            .parent {
+                position: relative;
+                top: 0;
+                left: 0;
+            }
+                .image1 {
+                position: relative;
+                top: 0;
+                left: 0;
+            }
+                .image2 {
+                position: absolute;
+                bottom: 6px;
+                left: 0px;
+                max-height: 600px;
+                max-width: 600px;
+            }
