--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,7 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 
 // Variables
 @import 'variables';
@@ -13,39 +14,51 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
-            html, body {
-                background-color: #fff;
-                color: #636b6f;
-                font-family: 'Nunito', sans-serif;
-                font-weight: 200;
-                height: 100vh;
-                margin: 0;
-            }
+    html, body {
+        background-color: #fff;
+        color: #636b6f;
+        font-family: 'Nunito', sans-serif;
+        font-weight: 200;
+        height: 100vh;
+        margin: 0;
+    }
 
-            .top-right {
-                position: absolute;
-                right: 10px;
-                top: 18px;
-            }
+    .top-right {
+        position: absolute;
+        right: 10px;
+        top: 18px;
+    }
 
-            .title {
-                font-size: 84px;
-            }
+    h1 {
+        font-size: 95px;
+        font-family: 'Dancing Script', cursive;
+    }
 
-            .parent {
-                position: relative;
-                top: 0;
-                left: 0;
-            }
-                .image1 {
-                position: relative;
-                top: 0;
-                left: 0;
-            }
-                .image2 {
-                position: absolute;
-                bottom: 6px;
-                left: 0px;
-                max-height: 600px;
-                max-width: 600px;
-            }
+    .splash-container{
+      background-color: #26DDDC;
+      color: white;
+      text-align: center;
+    }
+
+    .splash-text{
+      padding: 30px;
+    }
+
+    .parent {
+        position: relative;
+        top: 0;
+        left: 0;
+        margin: auto;
+    }
+        .image1 {
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+        .image2 {
+        position: absolute;
+        bottom: 6px;
+        left: 0px;
+        max-height: 600px;
+        max-width: 600px;
+    }
