--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Dancing+Script);@charset "UTF-8";
 
 /*!
  * Bootstrap v4.2.1 (https://getbootstrap.com/)
@@ -10512,14 +10512,26 @@ body {
   top: 18px;
 }
 
-.title {
-  font-size: 84px;
+h1 {
+  font-size: 95px;
+  font-family: "Dancing Script", cursive;
+}
+
+.splash-container {
+  background-color: #26DDDC;
+  color: white;
+  text-align: center;
+}
+
+.splash-text {
+  padding: 30px;
 }
 
 .parent {
   position: relative;
   top: 0;
   left: 0;
+  margin: auto;
 }
 
 .image1 {
