--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -48,7 +48,8 @@
         position: relative;
         top: 0;
         left: 0;
-        margin: auto;
+        text-align: center;
+        margin: 20px;
     }
         .image1 {
         position: relative;
@@ -57,8 +58,11 @@
     }
         .image2 {
         position: absolute;
-        bottom: 6px;
-        left: 0px;
+        bottom: 0px;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
         max-height: 600px;
         max-width: 600px;
     }
